@@ -2,6 +2,7 @@
 # from the project root directory.
 ENV["RAILS_ENV"] = "test"
 require File.expand_path(File.dirname(__FILE__) + "/../config/environment")
+require 'spec'
 require 'spec/rails'
 
 Spec::Runner.configure do |config|
